--- a/views/coba.html
+++ b/views/coba.html
@@ -65,7 +65,7 @@
 </html> -->
 
 <!-- =========================================HTTP============================= -->
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>IoT Control</title>
@@ -125,13 +125,17 @@
     <button onclick="sendMessage('2')">Matikan Lampu 1</button>
     <button onclick="sendMessage('3')">Nyalakan Lampu 2</button>
     <button onclick="sendMessage('4')">Matikan Lampu 2</button>
+    <button onclick="sendMessage('5')">Nyalakan Lampu 3</button>
+    <button onclick="sendMessage('6')">Matikan Lampu 3</button>
+    <button onclick="sendMessage('7')">Nyalakan Lampu 4</button>
+    <button onclick="sendMessage('8')">Matikan Lampu 4</button>
     <p id="elapsed-time">Elapsed time: 0 ms</p>
     <p id="server-response"></p>
 </body>
-</html> -->
+</html>
 
 <!-- ===========================MQTT==================== -->
-
+<!-- 
 <!DOCTYPE html>
 <html>
 <head>
@@ -199,7 +203,7 @@
     <p id="elapsed-time">Elapsed time: 0 ms</p>
     <p id="server-response"></p>
 </body>
-</html>
+</html> -->
 
 
 
